Midterm3/parser.output
Terminals unused in grammar

   ERROR
   COMMENT


State 0 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: precomList declList

    2 precomList: precomList PRECOMPILER
    3           | PRECOMPILER
    4           | %empty

    5 declList: declList decl
    6         | decl

    7 decl: varDecl
    8     | funDecl

    9 varDecl: typeSpec varDeclList ';'

   10 scopedVarDecl: STATIC typeSpec varDeclList ';'
   11              | typeSpec varDeclList ';'

   12 varDeclList: varDeclList ',' varDeclInit
   13            | varDeclInit

   14 varDeclInit: varDeclId
   15            | varDeclId ':' simpleExp

   16 varDeclId: ID
   17          | ID '[' NUMCONST ']'

   18 typeSpec: INT
   19         | BOOL
   20         | CHAR

   21 funDecl: typeSpec ID '(' parms ')' stmt
   22        | ID '(' parms ')' stmt

   23 parms: parmList
   24      | %empty

   25 parmList: parmList ';' parmTypeList
   26         | parmTypeList

   27 parmTypeList: typeSpec parmIdList

   28 parmIdList: parmIdList ',' parmId
   29           | parmId

   30 parmId: ID
   31       | ID '[' ']'

   32 stmt: matched
   33     | unmatched

   34 matched: IF simpleExp THEN matched ELSE matched
   35        | WHILE simpleExp DO matched
   36        | FOR ID '=' iterRange DO matched
   37        | expstmt
   38        | compoundstmt
   39        | returnstmt
   40        | breakstmt

   41 iterRange: simpleExp TO simpleExp
   42          | simpleExp TO simpleExp BY simpleExp

   43 unmatched: IF simpleExp THEN stmt
   44          | IF simpleExp THEN matched ELSE unmatched
   45          | WHILE simpleExp DO unmatched
   46          | FOR ID '=' iterRange DO unmatched

   47 expstmt: exp ';'
   48        | ';'

   49 compoundstmt: '{' localDecls stmtList '}'

   50 localDecls: localDecls scopedVarDecl
   51           | %empty

   52 stmtList: stmtList stmt
   53         | %empty

   54 returnstmt: RETURN ';'
   55           | RETURN exp ';'

   56 breakstmt: BREAK ';'

   57 exp: mutable assignop exp
   58    | mutable INC
   59    | mutable DEC
   60    | simpleExp

   61 assignop: '='
   62         | ADDASS
   63         | SUBASS
   64         | MULASS
   65         | DIVASS

   66 simpleExp: simpleExp OR andExp
   67          | andExp

   68 andExp: andExp AND unaryRelExp
   69       | unaryRelExp

   70 unaryRelExp: NOT unaryRelExp
   71            | relExp

   72 relExp: minmaxExp relop minmaxExp
   73       | minmaxExp

   74 relop: LEQ
   75      | '>'
   76      | '<'
   77      | GEQ
   78      | EQ
   79      | NEQ

   80 minmaxExp: minmaxExp minmaxop sumExp
   81          | sumExp

   82 minmaxop: MAX
   83         | MIN

   84 sumExp: sumExp sumop mulExp
   85       | mulExp

   86 sumop: '+'
   87      | '-'

   88 mulExp: mulExp mulop unaryExp
   89       | unaryExp

   90 mulop: '*'
   91      | '/'
   92      | '%'

   93 unaryExp: unaryop unaryExp
   94         | factor

   95 unaryop: '-'
   96        | '*'
   97        | '?'

   98 factor: immutable
   99       | mutable

  100 mutable: ID
  101        | ID '[' exp ']'

  102 immutable: '(' exp ')'
  103          | call
  104          | constant

  105 call: ID '(' args ')'

  106 args: argList
  107     | %empty

  108 argList: argList ',' exp
  109        | exp

  110 constant: NUMCONST
  111         | CHARCONST
  112         | STRINGCONST
  113         | BOOLCONST


Terminals, with rules where they appear

$end (0) 0
'%' (37) 92
'(' (40) 21 22 102 105
')' (41) 21 22 102 105
'*' (42) 90 96
'+' (43) 86
',' (44) 12 28 108
'-' (45) 87 95
'/' (47) 91
':' (58) 15
';' (59) 9 10 11 25 47 48 54 55 56
'<' (60) 76
'=' (61) 36 46 61
'>' (62) 75
'?' (63) 97
'[' (91) 17 31 101
']' (93) 17 31 101
'{' (123) 49
'}' (125) 49
error (256)
INT (258) 18
ID (259) 16 17 21 22 30 31 36 46 100 101 105
NUMCONST (260) 17 110
IF (261) 34 43 44
ELSE (262) 34 44
THEN (263) 34 43 44
TO (264) 41 42
DO (265) 35 36 45 46
FOR (266) 36 46
RETURN (267) 54 55
ERROR (268)
PRECOMPILER (269) 2 3
BOOLCONST (270) 113
STATIC (271) 10
OR (272) 66
BOOL (273) 19
BREAK (274) 56
BY (275) 42
CHAR (276) 20
AND (277) 68
CHARCONST (278) 111
COMMENT (279)
NOT (280) 70
WHILE (281) 35 45
EQ (282) 78
GEQ (283) 77
LEQ (284) 74
DEC (285) 59
DIVASS (286) 65
SUBASS (287) 63
ADDASS (288) 62
INC (289) 58
MULASS (290) 64
NEQ (291) 79
MAX (292) 82
MIN (293) 83
STRINGCONST (294) 112


Nonterminals, with rules where they appear

$accept (58)
    on left: 0
program (59)
    on left: 1, on right: 0
precomList (60)
    on left: 2 3 4, on right: 1 2
declList (61)
    on left: 5 6, on right: 1 5
decl (62)
    on left: 7 8, on right: 5 6
varDecl (63)
    on left: 9, on right: 7
scopedVarDecl (64)
    on left: 10 11, on right: 50
varDeclList (65)
    on left: 12 13, on right: 9 10 11 12
varDeclInit (66)
    on left: 14 15, on right: 12 13
varDeclId (67)
    on left: 16 17, on right: 14 15
typeSpec (68)
    on left: 18 19 20, on right: 9 10 11 21 27
funDecl (69)
    on left: 21 22, on right: 8
parms (70)
    on left: 23 24, on right: 21 22
parmList (71)
    on left: 25 26, on right: 23 25
parmTypeList (72)
    on left: 27, on right: 25 26
parmIdList (73)
    on left: 28 29, on right: 27 28
parmId (74)
    on left: 30 31, on right: 28 29
stmt (75)
    on left: 32 33, on right: 21 22 43 52
matched (76)
    on left: 34 35 36 37 38 39 40, on right: 32 34 35 36 44
iterRange (77)
    on left: 41 42, on right: 36 46
unmatched (78)
    on left: 43 44 45 46, on right: 33 44 45 46
expstmt (79)
    on left: 47 48, on right: 37
compoundstmt (80)
    on left: 49, on right: 38
localDecls (81)
    on left: 50 51, on right: 49 50
stmtList (82)
    on left: 52 53, on right: 49 52
returnstmt (83)
    on left: 54 55, on right: 39
breakstmt (84)
    on left: 56, on right: 40
exp (85)
    on left: 57 58 59 60, on right: 47 55 57 101 102 108 109
assignop (86)
    on left: 61 62 63 64 65, on right: 57
simpleExp (87)
    on left: 66 67, on right: 15 34 35 41 42 43 44 45 60 66
andExp (88)
    on left: 68 69, on right: 66 67 68
unaryRelExp (89)
    on left: 70 71, on right: 68 69 70
relExp (90)
    on left: 72 73, on right: 71
relop (91)
    on left: 74 75 76 77 78 79, on right: 72
minmaxExp (92)
    on left: 80 81, on right: 72 73 80
minmaxop (93)
    on left: 82 83, on right: 80
sumExp (94)
    on left: 84 85, on right: 80 81 84
sumop (95)
    on left: 86 87, on right: 84
mulExp (96)
    on left: 88 89, on right: 84 85 88
mulop (97)
    on left: 90 91 92, on right: 88
unaryExp (98)
    on left: 93 94, on right: 88 89 93
unaryop (99)
    on left: 95 96 97, on right: 93
factor (100)
    on left: 98 99, on right: 94
mutable (101)
    on left: 100 101, on right: 57 58 59 99
immutable (102)
    on left: 102 103 104, on right: 98
call (103)
    on left: 105, on right: 103
args (104)
    on left: 106 107, on right: 105
argList (105)
    on left: 108 109, on right: 106 108
constant (106)
    on left: 110 111 112 113, on right: 104


State 0

    0 $accept: . program $end

    PRECOMPILER  shift, and go to state 1

    PRECOMPILER  [reduce using rule 4 (precomList)]
    $default     reduce using rule 4 (precomList)

    program     go to state 2
    precomList  go to state 3


State 1

    3 precomList: PRECOMPILER .

    $default  reduce using rule 3 (precomList)


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 program: precomList . declList
    2 precomList: precomList . PRECOMPILER

    INT          shift, and go to state 5
    ID           shift, and go to state 6
    PRECOMPILER  shift, and go to state 7
    BOOL         shift, and go to state 8
    CHAR         shift, and go to state 9

    declList  go to state 10
    decl      go to state 11
    varDecl   go to state 12
    typeSpec  go to state 13
    funDecl   go to state 14


State 4

    0 $accept: program $end .

    $default  accept


State 5

   18 typeSpec: INT .

    $default  reduce using rule 18 (typeSpec)


State 6

   22 funDecl: ID . '(' parms ')' stmt

    '('  shift, and go to state 15


State 7

    2 precomList: precomList PRECOMPILER .

    $default  reduce using rule 2 (precomList)


State 8

   19 typeSpec: BOOL .

    $default  reduce using rule 19 (typeSpec)


State 9

   20 typeSpec: CHAR .

    $default  reduce using rule 20 (typeSpec)


State 10

    1 program: precomList declList .
    5 declList: declList . decl

    INT   shift, and go to state 5
    ID    shift, and go to state 6
    BOOL  shift, and go to state 8
    CHAR  shift, and go to state 9

    $default  reduce using rule 1 (program)

    decl      go to state 16
    varDecl   go to state 12
    typeSpec  go to state 13
    funDecl   go to state 14


State 11

    6 declList: decl .

    $default  reduce using rule 6 (declList)


State 12

    7 decl: varDecl .

    $default  reduce using rule 7 (decl)


State 13

    9 varDecl: typeSpec . varDeclList ';'
   21 funDecl: typeSpec . ID '(' parms ')' stmt

    ID  shift, and go to state 17

    varDeclList  go to state 18
    varDeclInit  go to state 19
    varDeclId    go to state 20


State 14

    8 decl: funDecl .

    $default  reduce using rule 8 (decl)


State 15

   22 funDecl: ID '(' . parms ')' stmt

    INT   shift, and go to state 5
    BOOL  shift, and go to state 8
    CHAR  shift, and go to state 9

    $default  reduce using rule 24 (parms)

    typeSpec      go to state 21
    parms         go to state 22
    parmList      go to state 23
    parmTypeList  go to state 24


State 16

    5 declList: declList decl .

    $default  reduce using rule 5 (declList)


State 17

   16 varDeclId: ID .
   17          | ID . '[' NUMCONST ']'
   21 funDecl: typeSpec ID . '(' parms ')' stmt

    '['  shift, and go to state 25
    '('  shift, and go to state 26

    $default  reduce using rule 16 (varDeclId)


State 18

    9 varDecl: typeSpec varDeclList . ';'
   12 varDeclList: varDeclList . ',' varDeclInit

    ';'  shift, and go to state 27
    ','  shift, and go to state 28


State 19

   13 varDeclList: varDeclInit .

    $default  reduce using rule 13 (varDeclList)


State 20

   14 varDeclInit: varDeclId .
   15            | varDeclId . ':' simpleExp

    ':'  shift, and go to state 29

    $default  reduce using rule 14 (varDeclInit)


State 21

   27 parmTypeList: typeSpec . parmIdList

    ID  shift, and go to state 30

    parmIdList  go to state 31
    parmId      go to state 32


State 22

   22 funDecl: ID '(' parms . ')' stmt

    ')'  shift, and go to state 33


State 23

   23 parms: parmList .
   25 parmList: parmList . ';' parmTypeList

    ';'  shift, and go to state 34

    $default  reduce using rule 23 (parms)


State 24

   26 parmList: parmTypeList .

    $default  reduce using rule 26 (parmList)


State 25

   17 varDeclId: ID '[' . NUMCONST ']'

    NUMCONST  shift, and go to state 35


State 26

   21 funDecl: typeSpec ID '(' . parms ')' stmt

    INT   shift, and go to state 5
    BOOL  shift, and go to state 8
    CHAR  shift, and go to state 9

    $default  reduce using rule 24 (parms)

    typeSpec      go to state 21
    parms         go to state 36
    parmList      go to state 23
    parmTypeList  go to state 24


State 27

    9 varDecl: typeSpec varDeclList ';' .

    $default  reduce using rule 9 (varDecl)


State 28

   12 varDeclList: varDeclList ',' . varDeclInit

    ID  shift, and go to state 37

    varDeclInit  go to state 38
    varDeclId    go to state 20


State 29

   15 varDeclInit: varDeclId ':' . simpleExp

    ID           shift, and go to state 39
    NUMCONST     shift, and go to state 40
    BOOLCONST    shift, and go to state 41
    CHARCONST    shift, and go to state 42
    NOT          shift, and go to state 43
    STRINGCONST  shift, and go to state 44
    '*'          shift, and go to state 45
    '-'          shift, and go to state 46
    '('          shift, and go to state 47
    '?'          shift, and go to state 48

    simpleExp    go to state 49
    andExp       go to state 50
    unaryRelExp  go to state 51
    relExp       go to state 52
    minmaxExp    go to state 53
    sumExp       go to state 54
    mulExp       go to state 55
    unaryExp     go to state 56
    unaryop      go to state 57
    factor       go to state 58
    mutable      go to state 59
    immutable    go to state 60
    call         go to state 61
    constant     go to state 62


State 30

   30 parmId: ID .
   31       | ID . '[' ']'

    '['  shift, and go to state 63

    $default  reduce using rule 30 (parmId)


State 31

   27 parmTypeList: typeSpec parmIdList .
   28 parmIdList: parmIdList . ',' parmId

    ','  shift, and go to state 64

    $default  reduce using rule 27 (parmTypeList)


State 32

   29 parmIdList: parmId .

    $default  reduce using rule 29 (parmIdList)


State 33

   22 funDecl: ID '(' parms ')' . stmt

    ID           shift, and go to state 39
    NUMCONST     shift, and go to state 40
    IF           shift, and go to state 65
    FOR          shift, and go to state 66
    RETURN       shift, and go to state 67
    BOOLCONST    shift, and go to state 41
    BREAK        shift, and go to state 68
    CHARCONST    shift, and go to state 42
    NOT          shift, and go to state 43
    WHILE        shift, and go to state 69
    STRINGCONST  shift, and go to state 44
    '*'          shift, and go to state 45
    '{'          shift, and go to state 70
    ';'          shift, and go to state 71
    '-'          shift, and go to state 46
    '('          shift, and go to state 47
    '?'          shift, and go to state 48

    stmt          go to state 72
    matched       go to state 73
    unmatched     go to state 74
    expstmt       go to state 75
    compoundstmt  go to state 76
    returnstmt    go to state 77
    breakstmt     go to state 78
    exp           go to state 79
    simpleExp     go to state 80
    andExp        go to state 50
    unaryRelExp   go to state 51
    relExp        go to state 52
    minmaxExp     go to state 53
    sumExp        go to state 54
    mulExp        go to state 55
    unaryExp      go to state 56
    unaryop       go to state 57
    factor        go to state 58
    mutable       go to state 81
    immutable     go to state 60
    call          go to state 61
    constant      go to state 62


State 34

   25 parmList: parmList ';' . parmTypeList

    INT   shift, and go to state 5
    BOOL  shift, and go to state 8
    CHAR  shift, and go to state 9

    typeSpec      go to state 21
    parmTypeList  go to state 82


State 35

   17 varDeclId: ID '[' NUMCONST . ']'

    ']'  shift, and go to state 83


State 36

   21 funDecl: typeSpec ID '(' parms . ')' stmt

    ')'  shift, and go to state 84


State 37

   16 varDeclId: ID .
   17          | ID . '[' NUMCONST ']'

    '['  shift, and go to state 25

    $default  reduce using rule 16 (varDeclId)


State 38

   12 varDeclList: varDeclList ',' varDeclInit .

    $default  reduce using rule 12 (varDeclList)


State 39

  100 mutable: ID .
  101        | ID . '[' exp ']'
  105 call: ID . '(' args ')'

    '['  shift, and go to state 85
    '('  shift, and go to state 86

    $default  reduce using rule 100 (mutable)


State 40

  110 constant: NUMCONST .

    $default  reduce using rule 110 (constant)


State 41

  113 constant: BOOLCONST .

    $default  reduce using rule 113 (constant)


State 42

  111 constant: CHARCONST .

    $default  reduce using rule 111 (constant)


State 43

   70 unaryRelExp: NOT . unaryRelExp

    ID           shift, and go to state 39
    NUMCONST     shift, and go to state 40
    BOOLCONST    shift, and go to state 41
    CHARCONST    shift, and go to state 42
    NOT          shift, and go to state 43
    STRINGCONST  shift, and go to state 44
    '*'          shift, and go to state 45
    '-'          shift, and go to state 46
    '('          shift, and go to state 47
    '?'          shift, and go to state 48

    unaryRelExp  go to state 87
    relExp       go to state 52
    minmaxExp    go to state 53
    sumExp       go to state 54
    mulExp       go to state 55
    unaryExp     go to state 56
    unaryop      go to state 57
    factor       go to state 58
    mutable      go to state 59
    immutable    go to state 60
    call         go to state 61
    constant     go to state 62


State 44

  112 constant: STRINGCONST .

    $default  reduce using rule 112 (constant)


State 45

   96 unaryop: '*' .

    $default  reduce using rule 96 (unaryop)


State 46

   95 unaryop: '-' .

    $default  reduce using rule 95 (unaryop)


State 47

  102 immutable: '(' . exp ')'

    ID           shift, and go to state 39
    NUMCONST     shift, and go to state 40
    BOOLCONST    shift, and go to state 41
    CHARCONST    shift, and go to state 42
    NOT          shift, and go to state 43
    STRINGCONST  shift, and go to state 44
    '*'          shift, and go to state 45
    '-'          shift, and go to state 46
    '('          shift, and go to state 47
    '?'          shift, and go to state 48

    exp          go to state 88
    simpleExp    go to state 80
    andExp       go to state 50
    unaryRelExp  go to state 51
    relExp       go to state 52
    minmaxExp    go to state 53
    sumExp       go to state 54
    mulExp       go to state 55
    unaryExp     go to state 56
    unaryop      go to state 57
    factor       go to state 58
    mutable      go to state 81
    immutable    go to state 60
    call         go to state 61
    constant     go to state 62


State 48

   97 unaryop: '?' .

    $default  reduce using rule 97 (unaryop)


State 49

   15 varDeclInit: varDeclId ':' simpleExp .
   66 simpleExp: simpleExp . OR andExp

    OR  shift, and go to state 89

    $default  reduce using rule 15 (varDeclInit)


State 50

   67 simpleExp: andExp .
   68 andExp: andExp . AND unaryRelExp

    AND  shift, and go to state 90

    $default  reduce using rule 67 (simpleExp)


State 51

   69 andExp: unaryRelExp .

    $default  reduce using rule 69 (andExp)


State 52

   71 unaryRelExp: relExp .

    $default  reduce using rule 71 (unaryRelExp)


State 53

   72 relExp: minmaxExp . relop minmaxExp
   73       | minmaxExp .
   80 minmaxExp: minmaxExp . minmaxop sumExp

    EQ   shift, and go to state 91
    GEQ  shift, and go to state 92
    LEQ  shift, and go to state 93
    NEQ  shift, and go to state 94
    MAX  shift, and go to state 95
    MIN  shift, and go to state 96
    '>'  shift, and go to state 97
    '<'  shift, and go to state 98

    $default  reduce using rule 73 (relExp)

    relop     go to state 99
    minmaxop  go to state 100


State 54

   81 minmaxExp: sumExp .
   84 sumExp: sumExp . sumop mulExp

    '+'  shift, and go to state 101
    '-'  shift, and go to state 102

    $default  reduce using rule 81 (minmaxExp)

    sumop  go to state 103


State 55

   85 sumExp: mulExp .
   88 mulExp: mulExp . mulop unaryExp

    '*'  shift, and go to state 104
    '/'  shift, and go to state 105
    '%'  shift, and go to state 106

    $default  reduce using rule 85 (sumExp)

    mulop  go to state 107


State 56

   89 mulExp: unaryExp .

    $default  reduce using rule 89 (mulExp)


State 57

   93 unaryExp: unaryop . unaryExp

    ID           shift, and go to state 39
    NUMCONST     shift, and go to state 40
    BOOLCONST    shift, and go to state 41
    CHARCONST    shift, and go to state 42
    STRINGCONST  shift, and go to state 44
    '*'          shift, and go to state 45
    '-'          shift, and go to state 46
    '('          shift, and go to state 47
    '?'          shift, and go to state 48

    unaryExp   go to state 108
    unaryop    go to state 57
    factor     go to state 58
    mutable    go to state 59
    immutable  go to state 60
    call       go to state 61
    constant   go to state 62


State 58

   94 unaryExp: factor .

    $default  reduce using rule 94 (unaryExp)


State 59

   99 factor: mutable .

    $default  reduce using rule 99 (factor)


State 60

   98 factor: immutable .

    $default  reduce using rule 98 (factor)


State 61

  103 immutable: call .

    $default  reduce using rule 103 (immutable)


State 62

  104 immutable: constant .

    $default  reduce using rule 104 (immutable)


State 63

   31 parmId: ID '[' . ']'

    ']'  shift, and go to state 109


State 64

   28 parmIdList: parmIdList ',' . parmId

    ID  shift, and go to state 30

    parmId  go to state 110


State 65

   34 matched: IF . simpleExp THEN matched ELSE matched
   43 unmatched: IF . simpleExp THEN stmt
   44          | IF . simpleExp THEN matched ELSE unmatched

    ID           shift, and go to state 39
    NUMCONST     shift, and go to state 40
    BOOLCONST    shift, and go to state 41
    CHARCONST    shift, and go to state 42
    NOT          shift, and go to state 43
    STRINGCONST  shift, and go to state 44
    '*'          shift, and go to state 45
    '-'          shift, and go to state 46
    '('          shift, and go to state 47
    '?'          shift, and go to state 48

    simpleExp    go to state 111
    andExp       go to state 50
    unaryRelExp  go to state 51
    relExp       go to state 52
    minmaxExp    go to state 53
    sumExp       go to state 54
    mulExp       go to state 55
    unaryExp     go to state 56
    unaryop      go to state 57
    factor       go to state 58
    mutable      go to state 59
    immutable    go to state 60
    call         go to state 61
    constant     go to state 62


State 66

   36 matched: FOR . ID '=' iterRange DO matched
   46 unmatched: FOR . ID '=' iterRange DO unmatched

    ID  shift, and go to state 112


State 67

   54 returnstmt: RETURN . ';'
   55           | RETURN . exp ';'

    ID           shift, and go to state 39
    NUMCONST     shift, and go to state 40
    BOOLCONST    shift, and go to state 41
    CHARCONST    shift, and go to state 42
    NOT          shift, and go to state 43
    STRINGCONST  shift, and go to state 44
    '*'          shift, and go to state 45
    ';'          shift, and go to state 113
    '-'          shift, and go to state 46
    '('          shift, and go to state 47
    '?'          shift, and go to state 48

    exp          go to state 114
    simpleExp    go to state 80
    andExp       go to state 50
    unaryRelExp  go to state 51
    relExp       go to state 52
    minmaxExp    go to state 53
    sumExp       go to state 54
    mulExp       go to state 55
    unaryExp     go to state 56
    unaryop      go to state 57
    factor       go to state 58
    mutable      go to state 81
    immutable    go to state 60
    call         go to state 61
    constant     go to state 62


State 68

   56 breakstmt: BREAK . ';'

    ';'  shift, and go to state 115


State 69

   35 matched: WHILE . simpleExp DO matched
   45 unmatched: WHILE . simpleExp DO unmatched

    ID           shift, and go to state 39
    NUMCONST     shift, and go to state 40
    BOOLCONST    shift, and go to state 41
    CHARCONST    shift, and go to state 42
    NOT          shift, and go to state 43
    STRINGCONST  shift, and go to state 44
    '*'          shift, and go to state 45
    '-'          shift, and go to state 46
    '('          shift, and go to state 47
    '?'          shift, and go to state 48

    simpleExp    go to state 116
    andExp       go to state 50
    unaryRelExp  go to state 51
    relExp       go to state 52
    minmaxExp    go to state 53
    sumExp       go to state 54
    mulExp       go to state 55
    unaryExp     go to state 56
    unaryop      go to state 57
    factor       go to state 58
    mutable      go to state 59
    immutable    go to state 60
    call         go to state 61
    constant     go to state 62


State 70

   49 compoundstmt: '{' . localDecls stmtList '}'

    $default  reduce using rule 51 (localDecls)

    localDecls  go to state 117


State 71

   48 expstmt: ';' .

    $default  reduce using rule 48 (expstmt)


State 72

   22 funDecl: ID '(' parms ')' stmt .

    $default  reduce using rule 22 (funDecl)


State 73

   32 stmt: matched .

    $default  reduce using rule 32 (stmt)


State 74

   33 stmt: unmatched .

    $default  reduce using rule 33 (stmt)


State 75

   37 matched: expstmt .

    $default  reduce using rule 37 (matched)


State 76

   38 matched: compoundstmt .

    $default  reduce using rule 38 (matched)


State 77

   39 matched: returnstmt .

    $default  reduce using rule 39 (matched)


State 78

   40 matched: breakstmt .

    $default  reduce using rule 40 (matched)


State 79

   47 expstmt: exp . ';'

    ';'  shift, and go to state 118


State 80

   60 exp: simpleExp .
   66 simpleExp: simpleExp . OR andExp

    OR  shift, and go to state 89

    $default  reduce using rule 60 (exp)


State 81

   57 exp: mutable . assignop exp
   58    | mutable . INC
   59    | mutable . DEC
   99 factor: mutable .

    DEC     shift, and go to state 119
    DIVASS  shift, and go to state 120
    SUBASS  shift, and go to state 121
    ADDASS  shift, and go to state 122
    INC     shift, and go to state 123
    MULASS  shift, and go to state 124
    '='     shift, and go to state 125

    $default  reduce using rule 99 (factor)

    assignop  go to state 126


State 82

   25 parmList: parmList ';' parmTypeList .

    $default  reduce using rule 25 (parmList)


State 83

   17 varDeclId: ID '[' NUMCONST ']' .

    $default  reduce using rule 17 (varDeclId)


State 84

   21 funDecl: typeSpec ID '(' parms ')' . stmt

    ID           shift, and go to state 39
    NUMCONST     shift, and go to state 40
    IF           shift, and go to state 65
    FOR          shift, and go to state 66
    RETURN       shift, and go to state 67
    BOOLCONST    shift, and go to state 41
    BREAK        shift, and go to state 68
    CHARCONST    shift, and go to state 42
    NOT          shift, and go to state 43
    WHILE        shift, and go to state 69
    STRINGCONST  shift, and go to state 44
    '*'          shift, and go to state 45
    '{'          shift, and go to state 70
    ';'          shift, and go to state 71
    '-'          shift, and go to state 46
    '('          shift, and go to state 47
    '?'          shift, and go to state 48

    stmt          go to state 127
    matched       go to state 73
    unmatched     go to state 74
    expstmt       go to state 75
    compoundstmt  go to state 76
    returnstmt    go to state 77
    breakstmt     go to state 78
    exp           go to state 79
    simpleExp     go to state 80
    andExp        go to state 50
    unaryRelExp   go to state 51
    relExp        go to state 52
    minmaxExp     go to state 53
    sumExp        go to state 54
    mulExp        go to state 55
    unaryExp      go to state 56
    unaryop       go to state 57
    factor        go to state 58
    mutable       go to state 81
    immutable     go to state 60
    call          go to state 61
    constant      go to state 62


State 85

  101 mutable: ID '[' . exp ']'

    ID           shift, and go to state 39
    NUMCONST     shift, and go to state 40
    BOOLCONST    shift, and go to state 41
    CHARCONST    shift, and go to state 42
    NOT          shift, and go to state 43
    STRINGCONST  shift, and go to state 44
    '*'          shift, and go to state 45
    '-'          shift, and go to state 46
    '('          shift, and go to state 47
    '?'          shift, and go to state 48

    exp          go to state 128
    simpleExp    go to state 80
    andExp       go to state 50
    unaryRelExp  go to state 51
    relExp       go to state 52
    minmaxExp    go to state 53
    sumExp       go to state 54
    mulExp       go to state 55
    unaryExp     go to state 56
    unaryop      go to state 57
    factor       go to state 58
    mutable      go to state 81
    immutable    go to state 60
    call         go to state 61
    constant     go to state 62


State 86

  105 call: ID '(' . args ')'

    ID           shift, and go to state 39
    NUMCONST     shift, and go to state 40
    BOOLCONST    shift, and go to state 41
    CHARCONST    shift, and go to state 42
    NOT          shift, and go to state 43
    STRINGCONST  shift, and go to state 44
    '*'          shift, and go to state 45
    '-'          shift, and go to state 46
    '('          shift, and go to state 47
    '?'          shift, and go to state 48

    $default  reduce using rule 107 (args)

    exp          go to state 129
    simpleExp    go to state 80
    andExp       go to state 50
    unaryRelExp  go to state 51
    relExp       go to state 52
    minmaxExp    go to state 53
    sumExp       go to state 54
    mulExp       go to state 55
    unaryExp     go to state 56
    unaryop      go to state 57
    factor       go to state 58
    mutable      go to state 81
    immutable    go to state 60
    call         go to state 61
    args         go to state 130
    argList      go to state 131
    constant     go to state 62


State 87

   70 unaryRelExp: NOT unaryRelExp .

    $default  reduce using rule 70 (unaryRelExp)


State 88

  102 immutable: '(' exp . ')'

    ')'  shift, and go to state 132


State 89

   66 simpleExp: simpleExp OR . andExp
